force-app/main/default/objects/copado__Continuous_Integration_Permission__c/fields/copado__Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>copado__Email_Notification__c</fullName>
    <label>Email Notification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Build Failure</fullName>
            </value>
            <value>
                <fullName>On Build Success</fullName>
            </value>
            <value>
                <fullName>On Deploy Failure</fullName>
            </value>
            <value>
                <fullName>On Deploy Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>