force-app/main/default/objects/copado__Continuous_Integration_Permission__c/fields/copado__Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Email_Template_Name__c</fullName>
    <inlineHelpText>Select here the Email Template Name. If your template is not visible here, it must be added by the Administrator by customising this picklist on the Continuous Integration Permission object.</inlineHelpText>
    <label>Email Template Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build Task Status Notification</fullName>
                <default>true</default>
                <label>Build Task Status Notification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>