force-app/main/default/objects/copado__Continuous_Integration_Permission__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Continuous_Integration__c</columns>
    <columns>copado__User__c</columns>
    <columns>copado__Access__c</columns>
    <columns>copado__Email_Notification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>